# mlx-rlaif-teacher-student

./: .gitignore  ACTIVATION_CACHING_ANALYSIS.md  CACHE_NONETYPE_ISSUES.md  CONTROLLER_FIX.md  DATASET_ANALYSIS.md  DATASET_GUIDE.md  INSTRUMENTS_MANUAL_PROFILING.md  MLX_GENERATOR_VS_TRAINER.md  MLX_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TIPS.md  PROFILING_GUIDE.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_HEALTH_CHECK.md  PR_SUMMARY.md  Q4_OPTIMIZATION.md  QUICKSTART.md  README.md  REBUILD_INSTRUCTIONS.md  REPETITION_ANALYSIS.md  RESUME_QUICK_START.md  RESUME_TRAINING.md  SCORING_PROMPT_EXAMPLE.md  TEACHER_TOKEN_OPTIMIZATION.md  TENSORBOARD_ANALYSIS.md  TENSORBOARD_METRICS.md  TRAINING_ANALYSIS.md  TRAINING_ANALYSIS_UPDATE.md  TRAINING_EFFICIENCY_ANALYSIS.md  TRAINING_LOOP_OPTIMIZATIONS.md  TRAINING_PERFORMANCE_WARMUP.md  TRAINING_STATS_REVIEW.md  TREND_DETECTION_FIX.md  VALIDATION_GUIDE.md  config.yaml  convert_to_mlx.py  data_utils.py  export_datasets.py  main.py  (+14 more)
.jules/: bolt.md
datasets/: README.md  train.jsonl
mlx_model_q4/: README.md
rlaif-client/: pyproject.toml  ui_server.py
rlaif-client/rlaif_client/: backends.py  training.py
rlaif-core/: .gitignore  Cargo.toml  pyproject.toml
rust_rlaif/: .gitignore  BUILD_FIX.md  COMPILATION_FIX.md  COREML_IMPLEMENTATION.md  COREML_MIGRATION.md  Cargo.toml  HYBRID_APPROACH.md  INSTALL.md  KNOWN_ISSUES.md  README.md  TRAINING_IMPLEMENTATION.md  build.rs  install_rust.sh  run_rlaif.sh
rust_rlaif/src/: config.rs  main.rs
rust_rlaif/src/models/: code_extractor.rs  dataset.rs  mlx_generator.rs  mlx_trainer.rs  mod.rs  student.rs  teacher.rs
rust_rlaif/src/training/: advantages.rs  code_saver.rs  metrics.rs  mod.rs  rewards.rs  trainer.rs
rust_rlaif/src/utils/: mod.rs
scripts/: README.md
(+36 files in other folders)
