[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaif-client"
version = "0.1.0"
description = "Python client for RLAIF Core"
dependencies = [
    "rlaif-core",
    "torch",
    "fastapi",
    "uvicorn"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlaif_client*"]
