[package]
name = "rlaif-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
# ML Framework
# Use PyO3 to call MLX directly from Rust (no subprocess overhead)
# Note: auto-initialize requires PYTHONHOME to be set before program starts
# Use: export PYTHONHOME=$(python3 -c "import sys; print(sys.prefix)")
pyo3 = { version = "0.21", features = [] }
tokenizers = "0.19"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP clients for API calls
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration and CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"  # Concurrent hashmap for caching
lru = "0.12"  # LRU cache
ndarray = "0.15"
rayon = "1.8"  # Parallel processing
regex = "1.10"  # Regular expressions for code extraction

# File I/O
walkdir = "2.4"

# Progress bars
indicatif = "0.17"

# System monitoring
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

